Added library dependencies to README, added sbt configuration instructions to README (since removed scripts), added + to sbt version